<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/five_dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/select_country_code"
        style="@style/headerTvNevyblueBold20"
        />

    <EditText
        android:id="@+id/search_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_margin="10dp"
        android:hint="@string/search_country_code"
        android:maxLines="1"
        android:padding="8dp"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:textColorHint="@color/yoho_grey"
        android:background="@drawable/light_gray_bg"
        style="@style/titleEdtNevyblueRgular17"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_lay"
        android:layout_below="@+id/search_ed"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp" />

    <LinearLayout
        android:id="@+id/btn_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/newLightBlueBaseColor"
            android:text="@string/cancel"
            style="@style/tvWhitebold17"  />


    </LinearLayout>
</RelativeLayout>