<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@color/white"
    android:layout_marginHorizontal="15dp">

    <ImageView
        android:id="@+id/img_app"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/twenty_five"
        android:src="@drawable/app_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/img_app">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:padding="@dimen/ten"
                    android:text="@string/version_name"
                    style="@style/headerTvNevyblueBold17" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_version"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/about_us_text"
                    style="@style/titleTvNevyblueRgular17" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="@dimen/ten"
        android:text="@string/copyright_text"
        style="@style/titleTvNevyblueRgular17" />
</RelativeLayout>