<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg_back"
    tools:context=".fragments.booking.SearchRoomFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_select_community"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/eight"
                android:layout_marginRight="@dimen/eight"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_light_blue">

                <TextView
                    android:id="@+id/communityId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/ten"
                    android:layout_toStartOf="@+id/arrow_down"
                    android:layout_toLeftOf="@+id/arrow_down"
                    android:hint="@string/select_community"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/arrow_down"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_arrow_down" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/eight"
                android:layout_marginRight="@dimen/eight"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_light_blue"
                android:padding="@dimen/ten_dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:text="@string/start_date"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/ten_dp"
                    android:layout_weight="1"
                    android:hint="@string/select_date"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/eight"
                android:layout_marginTop="8dp"
                android:layout_marginRight="@dimen/eight"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_light_blue"
                android:padding="@dimen/ten_dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.4"
                    android:text="@string/end_date"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/ten_dp"
                    android:layout_weight="1"
                    android:hint="@string/select_date"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/eight"
                android:layout_marginTop="8dp"
                android:layout_marginRight="@dimen/eight"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_light_blue"
                android:padding="@dimen/ten_dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.4"
                    android:text="@string/start_time"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/ten_dp"
                    android:layout_weight="1"
                    android:hint="@string/select_time"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/eight"
                android:layout_marginTop="8dp"
                android:layout_marginRight="@dimen/eight"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_light_blue"
                android:padding="@dimen/ten_dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.4"
                    android:text="@string/end_time"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/ten_dp"
                    android:layout_weight="1"
                    android:hint="@string/select_time"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkbox_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ten_dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="@dimen/ten_dp"
                android:layout_marginBottom="8dp"
                android:button="@drawable/checkbox_bg"
                android:paddingLeft="@dimen/ten"
                android:text="@string/exclude_weekends"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/search_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/btn_bg"
                android:text="@string/search"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>